# Langgraph-Advanced-Rag-agent-with-hallucination-and-self-correction

./: .env  app.py  graph.py  ingestion.py  pyproject.toml  requirements.txt
resources/: chroma.sqlite3
src/: config.py  constant.py  generate.py  grading.py  retriever.py  state.py  websearch.py
